Quiz buttons added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     </div>
     <p style="width: 100%; text-align: center; font-size: 25pt; font-family: Helvetica; color: #FFFFFF;">Chemical Reaction Quiz</p>
     <p id="equation" class="equation"></p>
+        <button class="quiz">Synthesis</button>
+        <button class="quiz">Decomposition</button>
+        <button class="quiz">Single Replacement</button>
+        <button class="quiz">Double Replacement</button>
     <script src="script.js"></script>
   </body>
 </html>
